<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal">

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal">

    <TextView
        android:id="@+id/serviceLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="15"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/service_url" />

    <EditText
        android:id="@+id/serviceUrl"
        android:layout_below="@id/serviceLabel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="14sp"
        android:inputType="textUri"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/service_www" />

    <TextView
        android:id="@+id/helperLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/serviceUrl"
        android:ems="15"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/helper_url" />

    <EditText
        android:id="@+id/helperUrl"
        android:layout_below="@id/helperLabel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="14sp"
        android:inputType="textUri"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/service_www" />

    <Button
        android:id="@+id/saveConfigButton"
        android:layout_below="@id/helperUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/save_config"
        android:onClick="saveConfigClicked"/>
    </RelativeLayout>
</LinearLayout>